--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "publish": "npm run build && npm run deploy"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "eslint-config-prettier": "^10.1.3",
     "eslint-plugin-prettier": "^5.4.0",
     "prettier": "^3.5.3",
